# vitsel-clap

./: Cargo.toml  README.md
.github/workflows/: aur-upload.yml  ci.yml
src/: dsp.rs  lib.rs  params.rs  presets.rs  voice.rs
temp_bin/: Android_Vitsel.clap  Vitsel.clap
